--- a/package.json
+++ b/package.json
@@ -21,5 +21,16 @@
     "blue-tape": "^0.1.10",
     "bluebird": "^2.10.2",
     "glob": "^5.0.15"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ehealthtech/schemap.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ehealthtech/schemap/issues"
+  },
+  "homepage": "https://github.com/ehealthtech/schemap"
 }
