--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schemap",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "A simple JSONSchema collection manager",
   "main": "lib/index.js",
   "scripts": {
@@ -15,13 +15,6 @@
     "ajv": "^1.4.5",
     "lodash": "^3.10.1"
   },
-  "devDependencies": {
-    "apt-tap": "^1.0.1",
-    "apt-tap-basic": "^1.0.0",
-    "blue-tape": "^0.1.10",
-    "bluebird": "^2.10.2",
-    "glob": "^5.0.15"
-  },
   "directories": {
     "test": "test"
   },
@@ -32,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/ehealthtech/schemap/issues"
   },
-  "homepage": "https://github.com/ehealthtech/schemap"
+  "homepage": "https://github.com/ehealthtech/schemap",
+  "devDependencies": {
+    "bootstrapt": "^1.0.1"
+  }
 }
