--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schemap",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A simple JSONSchema collection manager",
   "main": "lib/index.js",
   "scripts": {
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^1.4.5",
+    "is-my-json-valid": "^2.12.2",
+    "jsen": "^0.6.0",
     "lodash": "^3.10.1"
   },
   "directories": {
